// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusAlert component: not on exposures tab, exposed 1`] = `
<div
  className="MuiPaper-root MuiAlert-root MuiAlert-standardError MuiPaper-elevation0"
  role="alert"
  style={
    Object {
      "marginTop": 25,
      "width": "100%",
    }
  }
>
  <div
    className="MuiAlert-icon"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
  </div>
  <div
    className="MuiAlert-message"
  >
    Your risk level is elevated.
     See the status tab.
  </div>
</div>
`;

exports[`StatusAlert component: not on exposures tab, not exposed 1`] = `<div />`;

exports[`StatusAlert component: on exposures tab, exposed 1`] = `
<div
  className="MuiPaper-root MuiAlert-root MuiAlert-standardError MuiPaper-elevation0"
  role="alert"
  style={
    Object {
      "marginTop": 25,
      "width": "100%",
    }
  }
>
  <div
    className="MuiAlert-icon"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
  </div>
  <div
    className="MuiAlert-message"
  >
    Your risk level is elevated.
    
  </div>
</div>
`;

exports[`StatusAlert component: on exposures tab, not exposed 1`] = `<div />`;
